fix #26two visible inputs in questions

--- a/css/site.css
+++ b/css/site.css
@@ -767,6 +767,9 @@ input[type="submit"] {
 .conversation #input-form {
   display: none;
 }
+.question #input-form {
+  display: none;
+}
 @media screen and (min-width: 1800px) {
   body {
     font-size: 32px;
